--- a/HW1207/09_沈佩如/CH12.03_Q05.md
+++ b/HW1207/09_沈佩如/CH12.03_Q05.md
@@ -4,7 +4,8 @@
 
 ## 由題目得知：使用題目中給定的數據，檢驗 y 和 x 之間是否具有線性關係？使用 t 統計量在 1% 顯著水準下進行檢定。建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 
-
+>![image](https://github.com/user-attachments/assets/88854b22-1832-4b9b-a147-8c54382c1dfa)
+>
 ## 用t檢定檢定資料是否存在線性關係
 >
 >$步驟1：H_0 : b = 0，H_a : b \ne$ 0
