--- a/HW1207/09_沈佩如/CH12.03_Q07.md
+++ b/HW1207/09_沈佩如/CH12.03_Q07.md
@@ -2,8 +2,14 @@
 
 ![image](https://github.com/user-attachments/assets/cb34d3fd-5021-4103-bd52-ae5c4c215c9c)
 
-## 由題目得知：使用所給的數據計算決定係數 $r^2$。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
+![image](https://github.com/user-attachments/assets/9a25c15a-7743-461e-88ea-ee93b7f73255)
+
+## 使用所給的數據計算決定係數 $r^2$。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
 >
+>$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{12^2}{10*16}$ = 0.9
+>
+>$r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異
+
 >![image](https://github.com/user-attachments/assets/cd9777a4-e32a-4877-b050-3751f5e58866)
 
 ![image](https://github.com/user-attachments/assets/063990b7-4ac3-47a3-8969-20122b58c6b1)
