--- a/HW1207/20_柯伊馨/CH12.05_Q03_Q05.md
+++ b/HW1207/20_柯伊馨/CH12.05_Q03_Q05.md
@@ -1,2 +1,4 @@
 ![image](https://github.com/user-attachments/assets/5069c5a8-0c83-40fb-b178-8d8b63c9a660)
 
+3
+![image](https://github.com/user-attachments/assets/160d56a2-76f7-4c07-a432-dd705f365d1c)
