--- a/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
@@ -4,4 +4,13 @@
 
 ## 由題目得知：母體參數為：10, 15, 21, 22，母體平均值 $\mu$ 為17，在抽後不放回的試驗中，有多少隨機樣本？請列出。找出樣本平均數，並將其顯示為表格和機率直方圖。
 >
+ | Possible samples |      $\bar{x}$      |       Probability        | 
+ | ---------------- | ------------------- | ------------------------ |
+ | (10, 10)         | $\frac{20}{2}=10$   | $\frac{1}{16} = 0.0625$  | 
+ | (10, 15)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
+ | (10, 21)         | $\frac{31}{2}=15.5$ | $\frac{1}{16} = 0.0625$  | 
+ | (10, 22)         | $\frac{32}{2}=16$   | $\frac{1}{16} = 0.0625$  | 
+ | (15, 10)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
+ | (15, 15)         | $\frac{30}{2}=15$   | $\frac{1}{16} = 0.0625$  |
+>
 >![image](https://github.com/user-attachments/assets/10099786-c187-46be-a85a-3bcd4b8d8631)
