--- a/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
@@ -6,11 +6,11 @@
 >
  | Possible samples |      $\bar{x}$      |       Probability        | 
  | ---------------- | ------------------- | ------------------------ |
- | (10, 10)         | $\frac{20}{2}=10$   | $\frac{1}{16} = 0.0625$  | 
- | (10, 15)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
- | (10, 21)         | $\frac{31}{2}=15.5$ | $\frac{1}{16} = 0.0625$  | 
- | (10, 22)         | $\frac{32}{2}=16$   | $\frac{1}{16} = 0.0625$  | 
- | (15, 10)         | $\frac{25}{2}=12.5$ | $\frac{1}{16} = 0.0625$  | 
- | (15, 15)         | $\frac{30}{2}=15$   | $\frac{1}{16} = 0.0625$  |
+ | (10, 15)         | $\frac{10+15}{2}=10$   | $\frac{1}{16} = 0.0625$  | 
+ | (10, 21)         | $\frac{10+21}{2}=15.5$ | $\frac{1}{16} = 0.0625$  | 
+ | (10, 22)         | $\frac{10+22}{2}=16$ | $\frac{1}{16} = 0.0625$  | 
+ | (15, 21)         | $\frac{15+21}{2}=18$   | $\frac{1}{16} = 0.0625$  | 
+ | (15, 22)         | $\frac{15+22}{2}=18.5$ | $\frac{1}{16} = 0.0625$  | 
+ | (21, 22)         | $\frac{21+22}{2}=21.5$   | $\frac{1}{16} = 0.0625$  |
 >
 >![image](https://github.com/user-attachments/assets/10099786-c187-46be-a85a-3bcd4b8d8631)
