--- a/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
@@ -12,5 +12,19 @@
  | (15, 21)         | $\frac{15+21}{2}=18$   | $\frac{1}{6} = 0.1667$  | 
  | (15, 22)         | $\frac{15+22}{2}=18.5$ | $\frac{1}{6} = 0.1667$  | 
  | (21, 22)         | $\frac{21+22}{2}=21.5$   | $\frac{1}{6} = 0.1667$  |
->
+
+P( $\bar{x} = 12.5) = \frac{1}{6} = 0.1667$   
+
+P( $\bar{x} = 15.5) = \frac{1}{6} = 0.1667$
+
+P( $\bar{x} = 16) = \frac{1}{6} = 0.1667$
+
+P( $\bar{x} = 18) = \frac{1}{6} = 0.1667$
+
+P( $\bar{x} = 18.5) = \frac{1}{6} = 0.1667$
+
+P( $\bar{x} = 21.5) = \frac{1}{6} = 0.1667$
+
+![7000338D-F857-482B-82F3-DEBBEC6A74FA](https://github.com/user-attachments/assets/8529e706-9db1-470c-b4c3-2f4c74bc8ebc)
+
 >![image](https://github.com/user-attachments/assets/10099786-c187-46be-a85a-3bcd4b8d8631)
