--- a/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.02_Q07_09沈佩如.md
@@ -25,6 +25,6 @@ P( $\bar{x} = 18.5) = \frac{1}{6} = 0.1667$
 
 P( $\bar{x} = 21.5) = \frac{1}{6} = 0.1667$
 
-![7000338D-F857-482B-82F3-DEBBEC6A74FA](https://github.com/user-attachments/assets/8529e706-9db1-470c-b4c3-2f4c74bc8ebc)
+![image](https://github.com/user-attachments/assets/8a9eb7d0-6320-4c64-99b7-df903ee1a3a5)
 
 >![image](https://github.com/user-attachments/assets/10099786-c187-46be-a85a-3bcd4b8d8631)
