--- a/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
@@ -6,9 +6,22 @@
 
 ## a. 計算總鉀攝取量 𝑇 的均值和標準差。
 >
->![image](https://github.com/user-attachments/assets/acf54715-29fa-4c9b-8b71-1c08521d533d)
+>已知 令X為香蕉的鉀含量， T= X1 + X2 + X3 ，由於 X 服從常態分配，因其X1、X2、X3均為獨立抽樣，依照常態分配線性可加性知
+>
+>T ~  N( 3 * $$\mu$$ , $$\sqrt{3}$$ * $$\sigma $$ )  
+>
+>T ~  N( 1266 , 22.5167 ) 
+>
+>知 T 的均值為 1266 ，標準差為 22.5167
 
 ## b. 計算從3根香蕉中攝取的鉀總量超過1300 mg的機率。
+
+由a.知 T ~  N( 1266 , 22.5167 ) 
+
+P ( T > 1300 ) = P ( z > $$\frac{1300-\mu}{\sigma})$$
+
+= P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9345 = 0.0655
+
 >
 >![image](https://github.com/user-attachments/assets/829e3bc9-b348-4231-b3b9-ae259890661f)
 >
