--- a/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
@@ -6,7 +6,7 @@
 
 ## a. 計算總鉀攝取量 𝑇 的均值和標準差。
 >
->已知 令X為香蕉的鉀含量， T= X1 + X2 + X3 ，由於 X 服從常態分配，因其X1、X2、X3均為獨立抽樣，依照常態分配線性可加性知
+>已知 令X為香蕉的鉀含量， T= X1 + X2 + X3 
 >
 >T ~  N( 3 * $$\mu$$ , $$\sqrt{3}$$ * $$\sigma $$ )  
 >
