--- a/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.03_Q30_09沈佩如.md
@@ -15,14 +15,11 @@
 >知 T 的均值為 1266 ，標準差為 22.5167
 
 ## b. 計算從3根香蕉中攝取的鉀總量超過1300 mg的機率。
-
-由a.知 T ~  N( 1266 , 22.5167 ) 
-
-P ( T > 1300 ) = P ( z > $$\frac{1300-\mu}{\sigma})$$
-
-= P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9345 = 0.0655
-
 >
->![image](https://github.com/user-attachments/assets/829e3bc9-b348-4231-b3b9-ae259890661f)
+>由a.知 T ~  N( 1266 , 22.5167 ) 
 >
+>P ( T > 1300 ) = P ( z > $$\frac{1300-\mu}{\sigma})$$
+>
+>= P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9345 = 0.0655
+
 >![image](https://github.com/user-attachments/assets/7781b311-87d7-4d04-a607-1ed326b34ef6)
