--- a/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
@@ -10,13 +10,9 @@
 
 ## a.样本比例 $$\hat{p}$$ 的分佈是否近似常態分配？如果是，請求其均值和標準差。
 >
->根據中心極限定理，當樣本數 n 足夠大時，標準化後的樣本平均數，分布收斂到標準常態分配。
+>Mean: $\mu_{\hat{p}} = p = 0.47$
 >
->為了判斷樣本比例是否近似常態分配，我們需要檢查 np 和 n(1-p) 是否都大於 10。
->
->這是正態近似的條件：
->
->![image](https://github.com/user-attachments/assets/a06be0e3-14a5-4ce7-8f09-4bfde81c3ae8)
+>$\sigma_{\hat{p}} = \sqrt{\frac{p(1-p)}{n}} = \sqrt{\frac{0.47 \cdot 0.53}{100}} = \sqrt{\frac{0.2491}{100}} = 0.0499 $
 
 ## b.計算 P ( $\hat{p}$ < 0.45 ) 的機率
 >
