--- a/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
@@ -16,7 +16,11 @@
 
 ## b.計算 P ( $\hat{p}$ < 0.45 ) 的機率
 >
->![image](https://github.com/user-attachments/assets/2d5686b5-7e18-4ae8-a345-cafab1665b17)
+>P($\hat{p}$ < 0.45), and standardize the value of $\hat{p}$
+>
+>$Z = \frac{0.45 - 0.47}{0.0499} = -0.4008$
+>
+>P(Z < −0.4008) = 0.3446
 >
 >![image](https://github.com/user-attachments/assets/97075d29-e597-4bda-9585-db4f1223edfb)
 
