--- a/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
+++ b/HW1109/09_沈佩如/CH07.05_Q31_09沈佩如.md
@@ -26,13 +26,15 @@
 
 ## c.計算 P (0.42 < $\hat{p}$ < 0.45 ) 的機率
 >
+>P(0.42 ≤ $\hat{p}$ ≤ 0.45) = P(Z < -0.4008) - P(Z < -1.002) = 0.3446 - 0.1587 = 0.1859
+>
 >![image](https://github.com/user-attachments/assets/a5e7457f-5180-43be-ab21-5fd7e835ed6e)
 >
 >![image](https://github.com/user-attachments/assets/a7fcb3df-9c1d-4814-b34b-a0b8a9461df5)
 
 ## d. 如果觀察到的樣本比例 P ( $\hat{p}$ < 0.3 )，該如何解釋？
 >
->![image](https://github.com/user-attachments/assets/e4cfe1d7-ee01-4332-b252-fdf31629430d)
+>P(Z < -3.404) = 0.0003
 >
 >這意味著，樣本比例 $\hat{p}$ < 0.30，是非常罕見的情況，機率非常小。
 >
