--- a/HW1207/02_顏子軒/CH12.03_Q07.md
+++ b/HW1207/02_顏子軒/CH12.03_Q07.md
@@ -8,3 +8,11 @@ of the linear model?***
 
 ![image](https://github.com/user-attachments/assets/1a295595-ebf4-4640-91c0-f37692951705)
 
+使用所給的數據計算決定係數 $r^2$ 。這個數值告訴我們什麼資訊，關於這個線性模型的實用性？
+---
+
+整理資料
+
+$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{10^2}{16*12}$ = 0.9
+
+$r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異
