--- a/HW1207/02_顏子軒/CH12.01_Q22.md
+++ b/HW1207/02_顏子軒/CH12.01_Q22.md
@@ -29,17 +29,17 @@
 >
 >- Mean of $x$ armspan : $\overline{x}$ = 161
 >- Mean of $y$ height : $\overline{y}$ = 161.375
->- Cross-product: $S_{xy} = \sum (x_i - \overline{x})(y_i - \overline{y})$ = 324
->- Sum of squares: $S_{xx} = \sum (x_i - \overline{x})^2 = 247
->- Slope of the line: $b = \frac{S_{xy}}{S_{xx}}$ = $\frac{247}{324} \approx 0.76$
->- Intercept: $a = \overline{y} - b \times \overline{x}$ = $161.375 - 0.76 \times 161 \approx 96.56$ 
+>- Cross-product: $S_{xy} = \sum (x_i - \overline{x})(y_i - \overline{y})$ = 568
+>- Sum of squares: $S_{xx} = \sum (x_i - \overline{x})^2 = 468$
+>- Slope of the line: $b = \frac{S_{xy}}{S_{xx}}$ = $\frac{568}{468} \approx 0.8239$
+>- Intercept: $a = \overline{y} - b \times \overline{x}$ = $161.375 - 0.8239 \times 161 \approx 29.6003$ 
 >
 ><br/>
 >
 >**d. If a person has an armspan of 157 centimeters, what would you predict the person’s height to be?**
 >
->Using the regression equation: $y = 96.56 + 0.76x$
+>Using the regression equation: $y = 29.6003 + 0.8239x$
 >
->Substitute $x = 157$: $y=96.56+0.76 \times157 = 158.96cm$
+>Substitute $x = 157$: $y=29.6003+0.8239 \times157 = 158.9595cm$
 >
 >*This value suggests that the relationship is strong but does not perfectly align with da Vinci's claim.*
