--- a/HW1207/02_顏子軒/CH12.02_Q04.md
+++ b/HW1207/02_顏子軒/CH12.02_Q04.md
@@ -20,14 +20,14 @@
 >*Sum of Squares (SS)*
 >
 >- Total $SS$ : This is provided as 12.5
->- Regression $SS$ : This is provided as 4.3
+>- Regression $SS$ (SSR) : This is provided as 4.3
 >- Error $SS$ : $SS_{Error} = SS_{Total} - SS_{Regression} = 12.5 - 4.3 = 8.2$
 >
 >*Mean Squares (MS)*
 >
 >- The mean square for each source is calculated as: $MS = \frac{SS}{MS}$
->- Regression$MS$ : $MS_{Regression} = \frac{SS_{Regression}}{df_{Regression}} = \frac{4.30}{1} = 4.3$
->- Error $MS$ : $MS_{Error} = \frac{SS_{Error}}{df_{Error}} = \frac{8.2}{18} \approx 0.4556$
+>- Regression $MS$ (MSR): $MS_{Regression} = \frac{SS_{Regression}}{df_{Regression}} = \frac{4.30}{1} = 4.3$
+>- Error $MS$ (MSE) : $MS_{Error} = \frac{SS_{Error}}{df_{Error}} = \frac{8.2}{18} \approx 0.4556$
 >
 
 
