--- a/HW1207/02_顏子軒/CH12.02_Q10.md
+++ b/HW1207/02_顏子軒/CH12.02_Q10.md
@@ -21,7 +21,7 @@ variable x and which is the dependent variable y?***
 >- $\overline{y} = 27$
 >- $S_{xx} = \sum(x_i - \overline{x})^2 = 2254.5$
 >- $S_{xy} = \sum(x_i - \overline{x})(y_i - \overline{y}) = -332.43$
->- $b = \frac{S_{xy}}{S_{xy}} = \frac{-332.43}{2254.5} = -0.1476$
+>- $b = \frac{S_{xy}}{S_{xx}} = \frac{-332.43}{2254.5} = -0.1476$
 >- $a = \overline{y} - b \times \overline{x} = 27 - (-0.1476)(40.42) = 32.91$
 >
 >**Final regression line: $\hat{y} = 32.91 - 0.15 x$**
