--- a/HW1207/02_顏子軒/CH12.03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.03_Q05.md
@@ -74,7 +74,7 @@ for the slope of the line. What does the phrase
 >- Null Hypothesis $H_0$ : There is no linear relationship between 𝑥 and 𝑦(𝛽 = 0)
 >- Alternative Hypothesis $H_a$ : There is a linear relationship between  𝑥 and 𝑦(𝛽 $\neq$ 0)
 >
->The calculated 𝑡-statistic (5.20) does not exceed the critical 𝑡-value (5.84), so we fail to reject the null hypothesis at the 1% significance level. There is insufficient evidence to conclude that 
+>The calculated 𝑡-statistic (5.20) does not exceed the critical 𝑡-value (5.84), so we do not reject the null hypothesis at the 1% significance level. There is insufficient evidence to conclude that 
 𝑥 and 𝑦 are linearly related.
 >
 >**2. 99% Confidence Interval:**
