--- a/HW1207/02_顏子軒/CH12.05_Q03_Q05.md
+++ b/HW1207/02_顏子軒/CH12.05_Q03_Q05.md
@@ -1,26 +1,43 @@
-![CH12 05_Q03_Q05](https://github.com/user-attachments/assets/7b7da61a-4571-4a5d-ae8e-117596d0db73)
 
-3.
-
-當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
-
-信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
-
-Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
-
-= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1/10+0.81/48.9) )}$ =2.374 $\pm$ 1.0999
-
-信賴區間為 [1.2741 , 3.4739 ]
+![image](https://github.com/user-attachments/assets/549b78ea-5b0f-4739-8e8e-5e6ab35b982f)
 
 
-5.
+n = 10  
+SSE = 24  
+$\sum x_{i}$ = 59  
+$\sum {x_{i}}^2$ = 397  
+$\hat{y} = 0.074 + 0.46x$  
+$x_{0} = 5$  
+$\bar{x}$ = 5.9  
 
-當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
 
-預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+### Find the confidence interval for the average value of $y$ when $x = x_{0}$  
 
-Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+90% confidence level  
 
-= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1+1/10+0.81/48.9) )}$ =2.374 $\pm$ 3.404
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (\frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+$0.074 + 0.46 \times 5 \pm t_{8, 0.05} \times \sqrt{\frac{24}{8} \times (\frac{1}{10} + \frac{(5-5.9)^2} {(397 - 10 \times 5.9^2)})}$  
+= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (0.1 + \frac{0.81}{48.9})}$  
+= $2.374 \pm 1.86 \times \sqrt{0.349693} = 2.374 \pm 1.099908$  
+= [1.274092, 3.473908]  
 
-預測區間為 [-1.0302 , 5.7782 ]
+![image](https://github.com/user-attachments/assets/0b394422-7c73-4307-9d51-a17523abfb86)
+
+
+### Find a prediction interval for a particular value of $y$ when $x = x_{0}$  
+
+90% prediction interval
+
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (1 + \frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+= $0.074 + 2.3 \pm 1.86 \times \sqrt{3 \times (1 + 0.1 + \frac{0.81}{48.9})}$  
+= $2.374 \pm 1.86 \times \sqrt{3.349693} = 2.374 \pm 3.404203$  
+= [-1.030203, 5.778203]  
+
+
+### Is the interval wider than the corresponding confidence interval from Exercises 3?  
+
+Yes.  
+
+
+
+![image](https://github.com/user-attachments/assets/5a1fa229-ef94-4026-8dea-049b8f8db74d)
