--- a/HW1207/02_顏子軒/CH12.03_Q09.md
+++ b/HW1207/02_顏子軒/CH12.03_Q09.md
@@ -1,61 +1,104 @@
-![CH12 03_Q09](https://github.com/user-attachments/assets/56d7d994-66b4-4bf1-a91e-d7cb2e2036c0)
 
-a. 繪製道路里程與時間（年）之間的散佈圖，描述你所看到的趨勢。
----
+![image](https://github.com/user-attachments/assets/496753a3-ba54-4d69-be25-f6696998955c)
+  
+  
+  
+## a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
 
-![image](https://github.com/user-attachments/assets/ba0c3bc1-b2fe-476d-a53b-88b2dc2d7a85)
+![image](https://github.com/user-attachments/assets/a144f902-351c-42a5-b8df-46844c790e35)  
 
-散佈圖顯示道路里程與年份之間呈現明顯的線性增長趨勢。
+The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
+  
+  
+  
+## b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
 
-b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
----
+![image](https://github.com/user-attachments/assets/e2e69a31-6b13-4459-9cd3-5e4b77395fa6)
+  
+  
+### Least-squares line  
 
-整理資料如下
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 1,240 - 16 \times 7.5^2 = 340$  
+  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 132.8 - 16 \times 7.5 \times 1.04125 = 7.85$  
+  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{7.85}{340} = 0.02308823529 \approx 0.0231$  
+$a = \bar{y} - b \times \bar{x} = 1.04125 - 0.0231 \times 7.5 = 0.868$  
 
-![image](https://github.com/user-attachments/assets/0887cce3-7e3d-4be4-9e77-bf792df89bc1)
-
-求得 least-squares line : $\hat{y} = 0.8681+ 0.0231*x$
-
-並檢定資料是否存在線性關係
-
-$H_0$ : b = 0
-
-$H_a$ : b $\ne$ 0
-
-因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
-
-且 $\alpha$ = 0.05
-
-RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
-
-計算統計量
-
-$t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{0.0004}{340}}$ = 22.2349
-
-( SST = 0.1864， SSR = 0.1812 ，SSE = SST-SSR =0.0052， MSE= SSE /(n-2) = 0.0052 / 14 = 0.0004 )
-
-統計量落在拒絕域中，故我們拒絕虛無假設，即有充分證據證明 X和 Y存在線性關係
+Least-squares line: $\hat{y} = a + bx = 0.868 + 0.0231x$  
 
 
-c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
----
+### t statistic  
 
-|       | DF    | SS | MS |
-| ----  | --    | -- | -- |
-| Reg   | 1     | 0.1812  | 0.1812  |
-| Error | 14     | 0.0052 |0.0004  |
-| Tatol | 15     | 0.1864 |
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.04125^2 = 0.186375 \approx 0.1864$  
 
-$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.85^2}{340} = 0.18124264705 \approx 0.1812$  
 
-$F_{state}$ = 494.3926
+SSE = Total SS - SSR = $0.1864 - 0.1812 = 0.0052$  
 
-已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
+MSE = $\frac{0.0052}{14} = 0.00037142857 \approx 0.00037$  
+  
+1. $H_{0}: \beta = 0$ (Slope of the line is 0) vs $H_{1}: \beta \neq 0$ (Slope of the line is not 0)  
+
+2. Set $\alpha$=0.05  
+
+3. $t_{STAT} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
+
+4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.00037}{340}}} = 22.14371975 \approx 22.1437$  
+
+5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -2.145$ or $t* \gt 2.145$  
+
+![image](https://github.com/user-attachments/assets/45279de2-f13f-424b-8a2b-4066a58abf29)  
+
+6. Conclude: The $t*$ is greater than 2.145, which falls into the rejection region. Therefore, $H_{0}$ is rejected.
+   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
+  
+  
+  
+## c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
+  
+  
+### ANOVA table  
+
+|   Source   |       df     |     SS    |     MS     |  
+|------------|--------------|-----------|------------|  
+| Regression |       1      | **0.1812**| **0.1812** |  
+| Error      | n-2 = **14** | **0.0052**| **0.00037**|  
+| Total      | n-1 = **15** | **0.1864**|  
 
 
-d. 計算決定係數 $R^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
----
+### F statistic  
 
-$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
+1. $H_{0}$: The model is not useful in predicting $y$  
+   $H_{1}$: The model is useful in predicting $y$
 
-$R^2$ =0.9725 表示這個線性回歸模型解釋了 97% 的總變異
+2. Set up $\alpha$ = 0.05
+
+3. Test statistic: F = $\frac{MSR}{MSE} \sim F_{1,(n-2)}$
+
+4. Calculate realized statistic F*
+   $\frac{0.1812}{0.00037} \sim F_{1, 14} = 489.729729729 \approx 489.7297$  
+
+5. Find the rejection region
+   
+   ![image](https://github.com/user-attachments/assets/6db399b9-57d4-41b8-a98b-9c3b3a6243d1)
+
+6. Conclude
+   Reject $H_{0}$ if $F \lt F_{\alpha}$ with 1 and n-2 df  
+   Reject $H_{0}$ because F* = 489.7297, which is greater than $F_{\alpha}$ with 1 and 14 df
+   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
+
+### Verify the $t^2$ is equal to $F$
+
+The square of t statistic in part b is $22.1437^2$ $\approx$ 490.3434, which is close to F statistic 489.7297
+
+
+## d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
+
+$R^2 = \frac{SSR}{SS_{Total}}$  
+
+$R^2 = \frac{0.1812}{0.1864} \approx 0.972103 = 97.21%$  
+
+The $R^2$ value indicates that 97.21% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
