--- a/HW1207/02_顏子軒/CH12.03_Q07.md
+++ b/HW1207/02_顏子軒/CH12.03_Q07.md
@@ -1,104 +1,38 @@
 
-![image](https://github.com/user-attachments/assets/496753a3-ba54-4d69-be25-f6696998955c)
-  
-  
-  
-## a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
+![image](https://github.com/user-attachments/assets/27763e4b-2d9c-4ce7-92cb-206e67472b67)
 
-![image](https://github.com/user-attachments/assets/a144f902-351c-42a5-b8df-46844c790e35)  
+|       |    1   |    2   |    3   |    4   |    5   |  Total  | Average |  
+|-------|--------|--------|--------|--------|--------|---------|---------|  
+|  $x$  |   -2   |   -1   |    0   |    1   |    2   |     0   |    0    |  
+|  $y$  |    1   |    1   |    3   |    5   |    5   |    15   |    3    |  
+| $x^2$ |    4   |    1   |    0   |    1   |    4   |    10   |  
+| $y^2$ |    1   |    1   |    9   |   25   |   25   |    61   |  
+| $xy$  |   -2   |   -1   |    0   |    5   |   10   |    12   |  
 
-The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
-  
-  
-  
-## b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2 = 10 - 5 \times 0 = 10$  
 
-![image](https://github.com/user-attachments/assets/e2e69a31-6b13-4459-9cd3-5e4b77395fa6)
-  
-  
-### Least-squares line  
+$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2 = 61 - 5 \times 9 = 16$  
 
-$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
-$S_{xx} = 1,240 - 16 \times 7.5^2 = 340$  
-  
-$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
-$S_{xy} = 132.8 - 16 \times 7.5 \times 1.04125 = 7.85$  
-  
-$b = \frac{S_{xy}}{S_{xx}} = \frac{7.85}{340} = 0.02308823529 \approx 0.0231$  
-$a = \bar{y} - b \times \bar{x} = 1.04125 - 0.0231 \times 7.5 = 0.868$  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y} = 12 - 5 \times 0 \times 3 = 12$  
 
-Least-squares line: $\hat{y} = a + bx = 0.868 + 0.0231x$  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
+
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
+
+Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
+
+Total SS = $S_{yy}$ = 16  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
 
 
-### t statistic  
+### Calculate the coefficient of determination:  
 
-Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 17.5336 - 16 \times 1.04125^2 = 0.186375 \approx 0.1864$  
+$R^2 = \frac{SSR}{Total SS}$  
 
-SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{7.85^2}{340} = 0.18124264705 \approx 0.1812$  
-
-SSE = Total SS - SSR = $0.1864 - 0.1812 = 0.0052$  
-
-MSE = $\frac{0.0052}{14} = 0.00037142857 \approx 0.00037$  
-  
-1. $H_{0}: \beta = 0$ (Slope of the line is 0) vs $H_{1}: \beta \neq 0$ (Slope of the line is not 0)  
-
-2. Set $\alpha$=0.05  
-
-3. $t_{STAT} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
-
-4. Calculate t* = $\frac{0.0231-0}{\sqrt{\frac{0.00037}{340}}} = 22.14371975 \approx 22.1437$  
-
-5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -2.145$ or $t* \gt 2.145$  
-
-![image](https://github.com/user-attachments/assets/45279de2-f13f-424b-8a2b-4066a58abf29)  
-
-6. Conclude: The $t*$ is greater than 2.145, which falls into the rejection region. Therefore, $H_{0}$ is rejected.
-   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
-  
-  
-  
-## c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
-  
-  
-### ANOVA table  
-
-|   Source   |       df     |     SS    |     MS     |  
-|------------|--------------|-----------|------------|  
-| Regression |       1      | **0.1812**| **0.1812** |  
-| Error      | n-2 = **14** | **0.0052**| **0.00037**|  
-| Total      | n-1 = **15** | **0.1864**|  
+$R^2 = \frac{14.4}{16} = 0.9 = 90%$  
 
 
-### F statistic  
+### What information does $R^2$ give about the usefulness of the linear model?
 
-1. $H_{0}$: The model is not useful in predicting $y$  
-   $H_{1}$: The model is useful in predicting $y$
-
-2. Set up $\alpha$ = 0.05
-
-3. Test statistic: F = $\frac{MSR}{MSE} \sim F_{1,(n-2)}$
-
-4. Calculate realized statistic F*
-   $\frac{0.1812}{0.00037} \sim F_{1, 14} = 489.729729729 \approx 489.7297$  
-
-5. Find the rejection region
-   
-   ![image](https://github.com/user-attachments/assets/6db399b9-57d4-41b8-a98b-9c3b3a6243d1)
-
-6. Conclude
-   Reject $H_{0}$ if $F \lt F_{\alpha}$ with 1 and n-2 df  
-   Reject $H_{0}$ because F* = 489.7297, which is greater than $F_{\alpha}$ with 1 and 14 df
-   This indicates that the slope of the regression line is unlikely to be 0, suggesting a significant linear relationship between the number of miles of roadway and the year. 
-
-### Verify the $t^2$ is equal to $F$
-
-The square of t statistic in part b is $22.1437^2$ $\approx$ 490.3434, which is close to F statistic 489.7297
-
-
-## d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
-
-$R^2 = \frac{SSR}{SS_{Total}}$  
-
-$R^2 = \frac{0.1812}{0.1864} \approx 0.972103 = 97.21%$  
-
-The $R^2$ value indicates that 97.21% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
+The $R^2$ value indicates that 90% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
