--- a/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q07.08_10_Cathy.md
@@ -16,20 +16,40 @@ $S_{xx} = 10 - 5 \times 0^2 = 10$
 $S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
 $S_{xy} = 12 - 5 \times 0 \times 3 = 12$  
   
-$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 0.12$  
-$a = \bar{y} - b \times \bar{x} = 3 - 0.12 \times 0 = 3$  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
 
-Least-squares line: $\hat{y} = a + bx = 3 + 0.12x$  
+Least-squares line: $\hat{y} = a + bx = 3 + 1.2x$  
+
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 61 - 5 \times 3^2 = 16$  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
+
+SSE = Total SS - SSR = $16 - 14.4 = 1.6$
+
 
 
 ### 7. Estimate the average value of $y$ when $x$ = 1, using a 90% confidence interval.  
 
+90% confidence level  
 
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (\frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+= $3 + 1.2 \times 1 \pm t_{3, 0.05} \times \sqrt{\frac{1.6}{3} \times (\frac{1}{5} + \frac{(1-0)^2} {10})}$  
+= $4.2 \pm 2.353 \times \sqrt{\frac{1.6}{3} \times \frac{3}{10}}$  
+= $4.2 \pm 2.353 \times 0.4$  
+= [3.2588, 5.1412]  
+
+![image](https://github.com/user-attachments/assets/627eb89c-ba3b-4fa5-8e40-7ea05782c764)
 
 
 ### 8. Find a 90% prediction interval for some value of $y$ to be observed in the future when $x$ = 1.  
 
+90% prediction interval
 
-
+$\hat{y} \pm t_{(n-2), \alpha/2} \sqrt{\frac{SSE}{n-2} \times (1 + \frac{1}{n} + \frac{(x_{0}-\bar{x})^2}{S_{xx}})}$  
+= $3 + 1.2 \times 1 \pm t_{3, 0.05} \times \sqrt{\frac{1.6}{3} \times (1 + \frac{1}{5} + \frac{(1-0)^2} {10})}$  
+= $4.2 \pm 2.353 \times \sqrt{\frac{1.6}{3} \times (1 + 0.2 + 0.1)}$  
+= $4.2 \pm 2.353 \times 0.832666 = 4.2 \pm 1.959263$  
+= [2.240737, 6.159263]  
 
 
