--- a/HW1207/10_蔡佳媛/CH12.05_Q09.10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.05_Q09.10_10_Cathy.md
@@ -1,2 +1,20 @@
-![image](https://github.com/user-attachments/assets/025eb138-5823-48ac-bcc2-988217a7fb6a)  
-![image](https://github.com/user-attachments/assets/63df3ce2-895b-4991-8d69-34541c63e69c)
+![image](https://github.com/user-attachments/assets/98d8075c-a7db-4e7b-89c7-ce6b588b4c65)  
+![image](https://github.com/user-attachments/assets/880752cc-c572-4e63-91a4-2b35372c5151)
+![image](https://github.com/user-attachments/assets/b07e2cef-cbeb-4127-94f6-554251fe43f5)  
+![image](https://github.com/user-attachments/assets/c805ab27-8fe6-4d36-9749-6bb42dff12c8)  
+![image](https://github.com/user-attachments/assets/3dbf45ab-1c25-419c-9c7d-c31d43dfba98)  
+
+### 9. Find a 95% confidence interval for the average value of $y$ when $x$ = 2.
+
+When x = 2, y = 4.88571, 95% confidence interval = [4.60061, 5.17081]  
+
+![image](https://github.com/user-attachments/assets/7ea10599-c695-4521-ab5b-758a415be837)
+
+
+### 10. Find a 95% prediction interval for some value of $y$ to be observed in the future when $x$ = 2.
+
+When x = 2, 95% prediction interval = [4.28856, 5.48287]  
+
+![image](https://github.com/user-attachments/assets/7925449c-6d21-462d-8a73-4fe86aedfffb)
+
+
