--- a/HW1123/09_沈佩如/CH09.02_Q11-13.md
+++ b/HW1123/09_沈佩如/CH09.02_Q11-13.md
@@ -26,4 +26,6 @@
 
 ![image](https://github.com/user-attachments/assets/dcf9b0af-db99-4f50-a91d-b60a47c3e163)
 
-因P-value=0.0080 < α ，故拒絕H0
+## 因 Z* 落入拒絕域，故 Reject $H_{\text{o}}$
+
+## 因 P-value < α ，故 Reject $H_{\text{o}}$
