--- a/HW1109/HW1109Q05.md
+++ b/HW1109/HW1109Q05.md
@@ -22,6 +22,6 @@ b. 求每天從三根香蕉攝取的鉀總量超過 1300 毫克的概率
 
 P ( T > 1300 ) = P ( z > $$\frac{1300-\mu}{\sigma})$$
 
-= P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9332 = 0.0668
+= P ( z > $$\frac{1300- 1266 }{ 22.5167 })$$ $$\approx$$ P ( z > 1.51 ) = 1 - 0.9345 = 0.0655 (revised by 蕭宇辰 2024-12-16)
 
 reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 90}}$ P ( z > 1.51 ) = 1 - 0.9345
