--- a/HW1207/13_陳峻毅/CH12.03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q05.md
@@ -7,10 +7,10 @@
    
 - **斜率 (b)**：
   $b = 1.2$
-- **斜率的標準誤差 ($SE_b$)**：
-  $SE_b = 0.231$
+- **斜率的標準誤差 ($\sqrt{\frac{MSE}{S_{xx}}}$)**：
+  $\sqrt{\frac{MSE}{S_{xx}}} = 0.231$
 - **t 統計量**：
-  $t = \frac{b}{SE_b} = \frac{1.2}{0.231} \approx 5.20$
+  $t = \frac{b}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2}{0.231} \approx 5.20$
 - **臨界值 (99% 信賴水準, df = 3)**：
   $t_{critical} = 5.841$
 
@@ -20,7 +20,7 @@
 ---
 ## (2) 構建斜率的 99% 信賴區間
 信賴區間的公式為：
-$b \pm t_{critical} \cdot SE_b$
+$b \pm t_{critical} \cdot \sqrt{\frac{MSE}{S_{xx}}}$
 
 計算：
 $1.2 \pm 5.841 \cdot 0.231 \implies (-0.149, 2.549)$
