--- a/HW1207/18_張睿廷/CH12.01_Q17.md
+++ b/HW1207/18_張睿廷/CH12.01_Q17.md
@@ -1,1 +1,5 @@
 ![image](https://github.com/user-attachments/assets/791c4ca7-4603-495c-a34c-22a4af43f214)
+
+<img width="271" alt="image" src="https://github.com/user-attachments/assets/52473bc6-23a3-48de-b673-49936ca21812" />
+
+![image](https://github.com/user-attachments/assets/3c4e8aa1-4c77-4c78-999c-270a4db1d4c4)
