--- a/HW1207/18_張睿廷/CH12.01_Q22.md
+++ b/HW1207/18_張睿廷/CH12.01_Q22.md
@@ -1,1 +1,50 @@
-![image](https://github.com/user-attachments/assets/562840a4-f9fd-43cf-b2f6-319452e662c5)
+<img width="314" alt="image" src="https://github.com/user-attachments/assets/90f9232e-380e-4711-adf7-ff9689f6271a" />
+
+
+## a. 繪製臂展和身高的散佈圖。請在水平軸和垂直軸上使用相同的刻度。描述這兩個變數之間的關係。
+>
+>![image](https://github.com/user-attachments/assets/406e9f2c-472c-4038-ae34-2a3275c2ee60)
+>
+>從這些數據中，我們可以觀察到：臂展與身高之間呈現出一種正比例的關係，即臂展較長的人通常也身高較高。
+
+## b. 若達文西的說法正確，即一個人的臂展與身高大致相等，那麼回歸線的斜率應該是多少？
+>
+>若達文西的說法是正確的，意思是臂展（Armspan）與身高（Height）之間有正比例的關係，即臂展的長度大約等於身高，這樣>在迴歸分析中，斜率（slope）應該接近 1。
+
+## c. 計算回歸線，用於根據一個人的臂展預測身高。斜率 b 的值是否證實了你在 b 部分的結論？
+>
+>y 代表預測的身高（Height），x 代表臂展（Armspan），
+>
+>$\sum x = 172 + 158 + 165 + 176 + 172 +175 + 157 + 153 = 1328 $
+>
+>$\sum y = 175 + 157 + 165 + 177 + 170 + 170 + 160 +157 = 1331 $
+>
+>$\sum {x^2} = 172^2 + 158^2 + 165^2 + 176^2 + 172^2 + 175^2 + 157^2 + 153^2= 221016 $
+>
+>$\sum {y^2} = 175^2 + 157^2 + 165^2 + 177^2 + 170^2 + 170^2 + 160^2 +157^2 = 221877 $
+>
+>$\sum xy = (172)(175) + (158)(157) + (165)(165) + (176)(177) + (172)(170) + (175)(170) + (157)(160) + (153)(157) = 221414 $
+>
+>$\bar{x} = \frac{172+158+165+176+172+175+157+153}{8} = 166 $
+>
+>$\bar{y} = \frac{175+157+165+177+170+170+160+157}{8} = 166.375 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 221016 - \frac{(1328)^2}{8} = 568 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 221414 - \frac{(1328)(1331)}{8} = 468 $
+>
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{468}{568} = 0.8239 $$   							
+>							
+>截距: $$a= \bar{y}-b*\bar{x} = 166.375 - (0.8239)(166) = 29.6 $$							
+>						
+>regression line : $$\hat{y} = 29.6 + 0.82x $$
+>
+>![image](https://github.com/user-attachments/assets/5c508757-e067-4de1-ab74-4bdc48230199)
+
+## d. 若一個人的臂展為 157 公分，你會預測這個人的身高是多少？
+>
+>若一個人的臂展為 157 公分，則代入迴歸方程式中： $$\hat{y} = 29.6 + 0.82x $$ 
+>
+>$$\hat{y}$$ = 29.6 + 0.82 (157) = 158.34
+>
+>因此，根據這條迴歸線，預測這個人的身高約為 158.34 公分。
