--- a/HW1207/18_張睿廷/CH12.02_Q04.md
+++ b/HW1207/18_張睿廷/CH12.02_Q04.md
@@ -1,1 +1,5 @@
 ![image](https://github.com/user-attachments/assets/13727218-ea0c-433c-adcc-5edd801085eb)
+
+<img width="539" alt="image" src="https://github.com/user-attachments/assets/cbc2d557-f9dd-41f2-872c-e8132208c875" />
+
+<img width="830" alt="image" src="https://github.com/user-attachments/assets/e1c52d23-09b0-4d4f-9e08-0711195642b4" />
