--- a/HW1207/13_陳峻毅/CH12.03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q05.md
@@ -2,15 +2,15 @@
 
 # Testing the Slope of the Line: Regression Analysis and Confidence Interval
 ## (1) 使用 t 統計量檢驗 x 和 y 是否線性相關
-   $H_0$ : b = 0\
-   $H_a$ : b $\ne$ 0
+   $H_0$ : $\beta$ = 0\
+   $H_a$ : $\beta$ $\ne$ 0
    
 - **斜率 (b)**：
   $b = 1.2$
 - **斜率的標準誤差 ($\sqrt{\frac{MSE}{S_{xx}}}$)**：
   $\sqrt{\frac{MSE}{S_{xx}}} = 0.231$
 - **t 統計量**：
-  $t = \frac{b}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2}{0.231} \approx 5.20$
+  $t_{stat} = \frac{b}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2}{0.231} \approx 5.20$
 - **臨界值 (99% 信賴水準, df = 3)**：
   $t_{critical} = 5.841$
 
