--- a/HW1207/13_陳峻毅/CH12.03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q05.md
@@ -12,15 +12,15 @@
 - **t 統計量**：
   $t_{stat} = \frac{b}{\sqrt{\frac{MSE}{S_{xx}}}} = \frac{1.2}{0.231} \approx 5.20$
 - **臨界值 (99% 信賴水準, df = 3)**：
-  $t_{critical} = 5.841$
+  $t_{\alpha / 2} = 5.841$
 
 **結論**：
-- 因為 t = 5.20 小於 $t_{critical} = 5.841$，我們**無法拒絕**虛無假設 $H_0$(拒絕Ha)。
+- 因為 t = 5.20 小於 $t_{\alpha / 2} = 5.841$，我們**無法拒絕**虛無假設 $H_0$(拒絕Ha)。
 - 在 1% 顯著性水平下，沒有足夠證據可能表明 x 和 y 具有線性關係。
 ---
 ## (2) 構建斜率的 99% 信賴區間
 信賴區間的公式為：
-$b \pm t_{critical} \cdot \sqrt{\frac{MSE}{S_{xx}}}$
+$b \pm t_{\alpha / 2} \cdot \sqrt{\frac{MSE}{S_{xx}}}$
 
 計算：
 $1.2 \pm 5.841 \cdot 0.231 \implies (-0.149, 2.549)$
