--- a/HW1207/18_張睿廷/CH12.02_Q06.md
+++ b/HW1207/18_張睿廷/CH12.02_Q06.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/a1a85b1b-ed84-49d5-bfdd-41e53a10f9da)
+
+<img width="273" alt="image" src="https://github.com/user-attachments/assets/b26af488-4115-40a4-bcda-9cdb5838fd05" />
