--- a/HW1207/13_陳峻毅/CH12.03_Q09.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q09.md
@@ -8,12 +8,18 @@
 ### b. 最小平方法回歸線與檢定結果
 回歸線方程：
 $y = 0.868 + 0.0231x$
+檢定資料是否存在線性關係
 
+$H_0$ : $\beta$ = 0\
+$H_a$ : $\beta$ $\ne$ 0
+
+因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+且 $\alpha$ = 0.05
+
+RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }\
 檢定結果：
- t -統計量：t = 22.23 
-- 自由度：df = 14
-- P -值：P < 0.0001（顯著）
-
+$t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{0.0004}{340}}$ = 22.23 \
 結論：在顯著性水平 $\alpha = 0.05$ 下，拒絕虛無假設 $H_0$。結果表明，公路里程與年份之間存在顯著的線性關係。
 
 ---
@@ -33,13 +39,5 @@ $F = t^2$，計算結果一致。
 
 ### d. 計算 $r^2$ 並解釋
 回歸模型的 $r^2$ 值為：
-$r^2 = 0.972$
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725\
 這表明，年份對公路里程變化的解釋力達到 **97.2%**。換句話說，該模型非常有效，絕大多數的數據變異性都可以由年份的線性變化解釋。
-
----
-
-### 總結
-1. **散佈圖** 顯示明顯的線性關係。
-2. **回歸分析與檢定** 證明年份與公路里程之間的線性關係顯著。
-3. **ANOVA** 表格支持這一結果，並驗證了 $t^2 = F$。
-4. $r^2$ 高達 0.972 ，說明回歸線能有效地解釋數據的變化。
