--- a/HW1207/18_張睿廷/CH12.02_Q10.md
+++ b/HW1207/18_張睿廷/CH12.02_Q10.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/8a80cdc1-502b-48ca-ba48-5f5d867036c2)
+
+<img width="297" alt="image" src="https://github.com/user-attachments/assets/6ef77f13-619b-4ad9-9ede-cbb5710177b6" />
