--- a/HW1207/18_張睿廷/CH12.02_Q16.md
+++ b/HW1207/18_張睿廷/CH12.02_Q16.md
@@ -1,1 +1,5 @@
 ![image](https://github.com/user-attachments/assets/b7fd9ebf-21c0-44ce-b9e2-32d5016a74b4)
+
+<img width="607" alt="image" src="https://github.com/user-attachments/assets/34d81b06-989f-43b3-9188-438a0117de21" />
+
+![image](https://github.com/user-attachments/assets/efb26632-8bf8-4463-a371-0bef68a42a27)
