--- a/HW1207/13_陳峻毅/CH12.03_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q10.md
@@ -3,22 +3,22 @@
 
 ### a. 找出最小平方法回歸線
 回歸線的方程為：
-$y = b_0 + b_1 x$
+$\hat{y} = a + bx$
 由表格中的係數可得：
-- 截距 ($b_0$) = 93.617
-- 斜率 ($b_1$) = -1.251
+- 截距 (a) = 93.617
+- 斜率 (b) = -1.251
 
 因此，回歸線方程為：
-$y = 93.617 - 1.251x$
+$\hat{y} = 93.617 - 1.251x$
 
 ---
 ### b. 檢定 x 和 y 是否有線性關係
 假設檢定：
-- $H_0: b_1 = 0$（無線性關係）
-- $H_a: b_1 \neq 0$（有線性關係）
+- $H_0: \beta = 0$（無線性關係）
+- $H_a: \beta \neq 0$（有線性關係）
 
 檢定統計量：\
-$t = \frac{\text{估計的斜率} \, (\text{b1})}{\text{斜率的標準誤} \, (\text{SE})}$ = $\frac{-1.251}{0.120} = -10.471$
+$t_{stat} = \frac{\text{估計的斜率} \, (\text{b})}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{-1.251}{0.120} = -10.471$
 
 - 自由度 (df) = 7 - 2 = 5 
 - P -值：表格中已給出為 0.000 
@@ -28,15 +28,18 @@ $t = \frac{\text{估計的斜率} \, (\text{b1})}{\text{斜率的標準誤} \, (
 ---
 ### c. 建立斜率的 95% 信賴區間
 斜率 ($b_1$) 的信賴區間計算公式：
-$b_1 \pm t^* \cdot SE$
+$t_{\alpha / 2}$ * $\sqrt{\frac{MSE}{S_{xx}}}$
+
+
 其中：
-- $b_1 = -1.251$
+- b = -1.251
 - $SE = 0.120$
-- t*：根據自由度 df = 5 和 95% 信心水準，查 t-表得 t* $\approx 2.571$
+- t*：根據自由度 df = 5 和 95% 信心水準，查 t-表得 $t_{\alpha / 2}$* $\approx 2.571$
 
 
-代入公式：
-$\text{下限} = -1.251 - (2.571 \cdot 0.120) = -1.559$
+代入公式：\
+b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}}$ \
+$\text{下限} = -1.251 - (2.571 \cdot 0.120) = -1.559$\
 $\text{上限} = -1.251 + (2.571 \cdot 0.120) = -0.943$
 
 因此，95% 信賴區間為：
