--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -1,3 +1,11 @@
 # CH12.01_Q17 #
 
+<img width="428" alt="CH12 01_Q17" src="https://github.com/user-attachments/assets/227c4085-8b18-4250-9020-00afda9c1408" />
+
+Calculate the sums of squares and crossiproducts, $S_{xx}$ and $S_{xy}$. Find the least-squares line for the data. Plot the points and graph the line on the same graph. Does the line appear to provide a good fit to the data points?
+
+| X | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y |  1 |  1 | 3 | 5 | 5 |
+
 
