--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -8,4 +8,18 @@ Calculate the sums of squares and cross-products, $S_{xx}$ and $S_{xy}$. Find th
 |:-:|:--:|:--:|:-:|:-:|:-:|
 | y |  1 |  1 | 3 | 5 | 5 |
 
+$\bar{x}$ = $\frac{-2 - 1 + 0 + 1 + 2}{5}$ = 0
+
+$\bar{y}$ = $\frac{1 + 1 + 3 + 5 + 5}{5}$ = 3
+
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4+1+0+1+4 =10
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
+
+b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
+
+a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
+
+帶入y=a+bx後，故知，least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
+
 
