--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -18,7 +18,7 @@ $S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
 
 b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
 
-a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
+a= $\bar{y}-b \dot \bar{x}$ = 3 - 1.2 * 0 = 3
 
 帶入y=a+bx後，故知，least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
 
