--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -14,12 +14,12 @@ $\bar{y}$ = $\frac{1 + 1 + 3 + 5 + 5}{5}$ = 3
 
 $S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4 + 1 + 0 + 1 + 4 = 10
 
-$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 4 + 2 + 0 + 2 + 4 = 12
 
 b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
 
 a= $\bar{y}-b dot \bar{x}$ = 3 - 1.2 * 0 = 3
 
-帶入y=a+bx後，故知，least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
+y=a+bx least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
 
 
