--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -16,10 +16,12 @@ $S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4 + 1 + 0 + 1 + 4 = 10
 
 $S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 4 + 2 + 0 + 2 + 4 = 12
 
+The least-squares line: y = a + bx 
+
 b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
 
-a= $\bar{y}-b dot \bar{x}$ = 3 - 1.2 * 0 = 3
+a = $\bar{y} - b \dot \bar{x}$ = 3 - 1.2 * 0 = 3
 
-y=a+bx least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
+$\hat{y}$ =3 + 1.2 *x
 
 
