--- a/HW1207/21_徐偉峻/CH12.01_Q17.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q17.md
@@ -20,7 +20,7 @@ The least-squares line: y = a + bx
 
 b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
 
-a = $\bar{y} - b \dot \bar{x}$ = 3 - 1.2 * 0 = 3
+a = $\bar{y}$ - b $\dot$ $\bar{x}$ = 3 - 1.2 * 0 = 3
 
 $\hat{y}$ =3 + 1.2 *x
 
