--- a/HW1207/21_徐偉峻/CH12.01_Q22.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q22.md
@@ -1,3 +1,10 @@
 # CH12.01_Q22 #
 
+Armspan and Height
+Leonardo da Vinci (1452-1519) drew a sketch of a man, indicating that a person's armspan (measuring across the back with your arms outstretched to make a "T") is roughly equal to the person's height. To test this claim, we measured eight people with the following results:
+
+| Person  |  1  |  2  |  3  |  4  |
+|:-------:|:---:|:---:|:---:|:---:|
+| Armspan | 172 | 158 | 165 | 176 |
+| Height  | 175 | 157 | 165 | 177 |
 
