--- a/HW1207/21_徐偉峻/CH12.01_Q22.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q22.md
@@ -1,10 +1,21 @@
 # CH12.01_Q22 #
 
 Armspan and Height
-Leonardo da Vinci (1452-1519) drew a sketch of a man, indicating that a person's armspan (measuring across the back with your arms outstretched to make a "T") is roughly equal to the person's height. To test this claim, we measured eight people with the following results:
+Leonardo da Vinci (1452-1519) drew a sketch of a man, indicating that a person's armspan (measuring across the back with your arms outstretched to make a "T") is roughly equal to the person's height. To test this claim, we measured eight people with the following results in centimeters:
 
-| Person  |  1  |  2  |  3  |  4  |
-|:-------:|:---:|:---:|:---:|:---:|
-| Armspan | 172 | 158 | 165 | 176 |
-| Height  | 175 | 157 | 165 | 177 |
+| Person  |  1  |  2  |  3  |  4  |  5  |  6  |  7  |  8  |  
+|:-------:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+| Armspan | 172 | 158 | 165 | 176 | 172 | 175 | 157 | 153 |
+| Height  | 175 | 157 | 165 | 177 | 170 | 170 | 160 | 157 |
+
+a. Draw a scatterplot for armspan and height. Use the same scale on both the horizontal and vertical axes.
+Describe the relationship between the two variables.
+
+b. If da Vinci is correct, and a person's armspan is roughly the same as the person's height, what should the slope of the regression line be?
+
+c. Calculate the regression line for predicting height based on a person's armspan. Does the value of the slope b confirm your conclusions in part b?
+
+d. If a person has an armspan of 157 centimeters, what would you predict the person's height to be?
+
+
 
