--- a/HW1207/21_徐偉峻/CH12.01_Q22.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q22.md
@@ -19,3 +19,11 @@ d. If a person has an armspan of 157 centimeters, what would you predict the per
 
 
 
+$S_{xx}$ = 568
+
+$S_{xy}$ = 468
+
+b = $S_{xy}$ / $S_{xx}$ = 0.8239，a = 29.6003
+
+代入 y= a+bx ，得 $\hat{y}$ = 29.6003 + 0.8239 * x
+
