--- a/HW1207/21_徐偉峻/CH12.01_Q22.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q22.md
@@ -18,10 +18,15 @@ c. Calculate the regression line for predicting height based on a person's armsp
 d. If a person has an armspan of 157 centimeters, what would you predict the person's height to be?
 
 
+$\bar{x}$ = $\frac{172 + 158 + 165 + 176 + 172 + 175 + 157+ 153}{8}$ = 166
 
-$S_{xx}$ = 568
+$\bar{y}$ = $\frac{175 + 157 + 165 + 177 + 170 + 170 + 160 + 157}{8}$ = 166.375
 
-$S_{xy}$ = 468
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 568
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 468
+
+The least-squares line: y = a + bx 
 
 b = $S_{xy}$ / $S_{xx}$ = 0.8239，a = 29.6003
 
