--- a/HW1207/21_徐偉峻/CH12.01_Q22.md
+++ b/HW1207/21_徐偉峻/CH12.01_Q22.md
@@ -30,7 +30,7 @@ The least-squares line: y = a + bx
 
 b = $S_{xy}$ / $S_{xx}$ = 0.8239
 
-a = 29.6003
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 29.6003
 
-代入 y= a+bx ，得 $\hat{y}$ = 29.6003 + 0.8239 * x
+y = 29.6003 + 0.8239x
 
