--- a/HW1207/21_徐偉峻/CH12.02_Q04.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q04.md
@@ -1,3 +1,5 @@
 # CH12.02_Q04 #
 
+<img width="447" alt="CH12 02_Q04" src="https://github.com/user-attachments/assets/0176c91c-acf3-4dfe-96e1-19e225d2b8a7" />
+
 
