--- a/HW1207/21_徐偉峻/CH12.02_Q04.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q04.md
@@ -3,3 +3,16 @@
 <img width="447" alt="CH12 02_Q04" src="https://github.com/user-attachments/assets/0176c91c-acf3-4dfe-96e1-19e225d2b8a7" />
 
 
+在簡單線性回歸分析中，根據方差分析表（ANOVA），填入缺失的項目，按題意填入缺失項：
+---
+
+$df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
+
+$df_{error}$ = 19-1 =18
+
+SSE = 12.5-4.3 = 8.2
+
+MSR = SSR / $df_{reg}$ = 4.3 / 1 =4.3
+
+MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
+
