--- a/HW1207/21_徐偉峻/CH12.02_Q06.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q06.md
@@ -1,1 +1,14 @@
+# CH12.02_Q06 #
+
+<img width="441" alt="CH12 02_Q06" src="https://github.com/user-attachments/assets/1411830f-5ca4-4fe2-87f0-15e631c96ae6" />
+
+Method of Least Squares
+
+Use the data given. Construct the ANOVA table for a simple linear regression analysis, showing the sources, degrees of freedom, sums of squares, and mean squares.
+
+| x | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y | 1  | 1  | 3 | 5 | 5 |
+
+
 
