--- a/HW1207/21_徐偉峻/CH12.02_Q10.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q10.md
@@ -1,3 +1,5 @@
 # CH12.02_Q10 #
 
+<img width="446" alt="CH12 02_Q10" src="https://github.com/user-attachments/assets/62f4a5dc-aff4-4840-bb93-7c0bc8540a49" />
+
 
