--- a/HW1207/21_徐偉峻/CH12.02_Q16.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q16.md
@@ -1,2 +1,5 @@
 # CH12.02_Q16 #
 
+
+<img width="455" alt="CH12 02_Q16" src="https://github.com/user-attachments/assets/62faf2fd-845a-489d-b809-96f2163d987a" />
+
