--- a/HW1207/21_徐偉峻/CH12.02_Q10.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q10.md
@@ -15,16 +15,18 @@ Income is the independent variable x and BMI is the dependent variable y.
 
 b. Find tje least-squares line relating BMI to income?
 
-
 $S_{xx}$ = 2730.208 and $S_{xy}$ = -402.85 
 
-得 b = -0.1476 a= 32.9144 
+The least-squares line: y = a + bx 
 
-least-square line: $\hat{y}$ = 32.9144 - 0.1476 *x
+b = $\frac{S_{xx}}{S_{xy}}$ = -0.1476
+
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 32.9144 
+
+y = 32.9144 - 0.1476x
 
 
-c. 建構這個線性回歸的 ANOVA 表格。
----
+c. Construct the ANOVA table for the linear regression.
 
 |       | DF    | SS | MS |
 | ----  | --    | -- | -- |
