--- a/HW1207/18_張睿廷/CH12.03_Q05.md
+++ b/HW1207/18_張睿廷/CH12.03_Q05.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/10c242e6-d674-41a4-a12c-9d25bce51f08)
+
+![IMG_0338](https://github.com/user-attachments/assets/fc7d9851-0f62-4a83-af27-de2907a82d36)
