--- a/HW1207/18_張睿廷/CH12.03_Q07.md
+++ b/HW1207/18_張睿廷/CH12.03_Q07.md
@@ -1,1 +1,7 @@
 ![image](https://github.com/user-attachments/assets/d0d82c55-4b39-426c-a26a-5a4368b6b604)
+
+![image](https://github.com/user-attachments/assets/0eedb7f0-8851-4f0f-8a76-af301260b9fc)
+
+承上題
+
+$R^2 = \frac{\text{SSR}}{\text{Total SS}} = \frac{14.4}{16} = 0.9$
