--- a/HW1207/21_徐偉峻/CH12.02_Q16.md
+++ b/HW1207/21_徐偉峻/CH12.02_Q16.md
@@ -26,15 +26,9 @@ intercept of y a = 2.00
 
 slope b = −0.88
 
-這表示溫度增加時，草莓的質地 y 會下降，溫度與質地之間呈負相關關係。
+it means when the temperature increases and the texture of strawberries decrease.
 
 c. Construct the ANOVA table.
-
-|x     | -2	| -2|	0  | 2  |	2  |
-|------|----|---|----|----|----|
-|y     |4.0 |3.5|2.0 |0.5 |	0.0|
-
-建構Anova表如下
 
 |       | DF    | SS | MS |
 | ----  | --    | -- | -- |
