--- a/HW1207/18_張睿廷/CH12.03_Q09.md
+++ b/HW1207/18_張睿廷/CH12.03_Q09.md
@@ -1,1 +1,22 @@
 ![image](https://github.com/user-attachments/assets/b129e58b-6c27-4a15-b87a-f8d3e8474bfb)
+
+### a. 繪製道路里程與時間（年）之間的散佈圖，描述你所看到的趨勢。
+
+![image](https://github.com/user-attachments/assets/61a5f61e-025b-4efa-b5f4-5cabf6ebafd5)
+
+### b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
+
+<img width="907" alt="image" src="https://github.com/user-attachments/assets/249659b0-cf9d-4dcd-b561-c89b6cd075c5" />
+
+### c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
+
+<img width="239" alt="image" src="https://github.com/user-attachments/assets/1892566e-5d04-4c09-b3c2-b31d077f6308" />
+
+
+### d. 計算決定係數 $R^2$ 這個值對線性回歸模型的有效性提供了什麼資訊？
+
+$R^2 = \frac{SSR}{SS_{Total}}$  
+
+$R^2 = \frac{0.1812}{0.1864} \approx 0.972103 = 97.21%$  
+
+The $R^2$ value indicates that 97.21% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
