--- a/HW1207/21_徐偉峻/CH12.03_Q05.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q05.md
@@ -1,2 +1,5 @@
 # CH12.03_Q05 #
 
+<img width="428" alt="CH12 03_Q05" src="https://github.com/user-attachments/assets/11168fe9-dcbb-46ac-b662-623354366268" />
+
+
