--- a/HW1207/21_徐偉峻/CH12.03_Q05.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q05.md
@@ -2,4 +2,44 @@
 
 <img width="428" alt="CH12 03_Q05" src="https://github.com/user-attachments/assets/11168fe9-dcbb-46ac-b662-623354366268" />
 
+Testing the Slope of the Line: Use the data given. Do the data provide sufficient evidence to indicate that y and x are linearly related? Test using the t statistic at the 1% level of significance. Construct a 99% confidence interval for the slope of the line. What does the phrase "99% confident" mean?
 
+| x | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y | 1  | 1  | 3 | 5 | 5 |
+
+
+a = 3
+b = 1.2
+least-square line: y = 3 + 1.2x
+
+
+用t檢定檢定資料是否存在線性關係
+---
+$H_0$ : b = 0
+
+$H_a$ : b $\ne$ 0
+
+因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+且 $\alpha$ = 0.01
+
+RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
+
+計算統計量
+
+$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
+
+( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
+
+統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
+
+
+建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
+---
+
+99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
+
+信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
+
+即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
